# MC3172-CMake

./: CMakeLists.txt  README.MD  build.bat
MC3172/: MC3172.h  MC3172.lds  thread_config.h  thread_start.c
USER_CODE/: GPIO_GPCOM_TIMER_Example.c  GPIO_GPCOM_TIMER_Example.h  main.c
